fix: display better on small devices

--- a/src/app/components/selector/selector.component.scss
+++ b/src/app/components/selector/selector.component.scss
@@ -3,7 +3,7 @@
     $gap: .5rem;
 
     .head {
-        width: 13rem;
+        width: 12rem;
         height: 2rem;
         border: 1px solid #777;
         cursor: pointer;
@@ -33,7 +33,7 @@
         display: flex;
         flex-direction: column;
         flex: 1 1;
-        width: 13rem;
+        width: 12rem;
         height: 2rem;
         border: 1px solid #777;
         margin-top: -1px;
